--- a/src/css/googleMap.css
+++ b/src/css/googleMap.css
@@ -1,6 +1,6 @@
 html, body { height: 100%; margin: 0; padding: 0; }
       .googleMap{
-        height: 100vh;
+        height: 100%;
       }
       #target {
         width: 345px;
