--- a/src/css/a_timeline.css
+++ b/src/css/a_timeline.css
@@ -223,8 +223,7 @@ Main Components
   border-color: #dfdfdf;
 }
 .cd-horizontal-timeline .events-content {
-  overflow-y:hidden;
-  overflow-x:hidden;
+  /*overflow:auto;*/
   background-color: rgba(255,255,255,.2);
   position: relative;
   width: 100%;
