--- a/src/scss/pageActivity/pageBranch/_addACT.scss
+++ b/src/scss/pageActivity/pageBranch/_addACT.scss
@@ -62,7 +62,7 @@
 	position: relative;
 }
 .calendar-dark{
-	margin: 50px 0px 0px 0px;
+	// margin: 50px 0px 0px 0px;
 }
 #a-pReset{
 	padding: 0 !important;
