--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2110,8 +2110,8 @@ footer {
   .a-searchInput .pac-container {
     font-family: Roboto; }
 
-.a-panel-date {
-  margin-top: 20px; }
+.a-date-control {
+  width: 200px; }
 
 .a-panel {
   overflow: hidden;
@@ -2126,7 +2126,7 @@ footer {
   background-position: 50% 80%;
   background-repeat: no-repeat; }
   .a-panel input {
-    width: 100px; }
+    width: 230px; }
   .a-panel .a-panel-item {
     margin-bottom: 30px; }
     .a-panel .a-panel-item input {
@@ -2197,6 +2197,12 @@ footer {
 
 .a-phone-control {
   display: block;
+  position: fixed;
+  top: 190%;
+  left: 0;
+  right: 0;
+  margin: auto;
+  z-index: 20;
   text-align: center; }
   .a-phone-control .a-phone-btn {
     color: #f3f7f7;
@@ -2211,7 +2217,6 @@ footer {
   position: relative;
   padding: 20px;
   background-color: rgba(255, 255, 255, 0.3);
-  height: 330px;
   margin-top: 10px;
   margin-bottom: 20px; }
   .a-phone-searchContainer:hover {
@@ -2382,9 +2387,13 @@ footer {
   display: none; }
 
 #a-oldSlider {
-  overflow-y: scroll;
   margin: 0 -10px;
   height: 50%; }
+
+.a-scrollArea {
+  width: 100%;
+  height: 50vh;
+  overflow-y: scroll; }
 
 @media screen and (max-width: 767px) {
   .a-map .googleMap {
@@ -2400,7 +2409,9 @@ footer {
   .a-panel-top {
     display: none; }
   #a-phone-show {
-    height: 200px; } }
+    height: 200px; }
+  .a-scrollArea {
+    height: 80vh; } }
 
 @media screen and (min-width: 1280px) {
   .a-searchInput {
@@ -3105,9 +3116,6 @@ footer {
 
 .selected {
   position: relative; }
-
-.calendar-dark {
-  margin: 50px 0px 0px 0px; }
 
 #a-pReset {
   padding: 0 !important; }
