--- a/src/scss/pageActivity/_pageActivity.scss
+++ b/src/scss/pageActivity/_pageActivity.scss
@@ -42,6 +42,7 @@
 		outline: none;
 	}
 }//body END
+
 .a-relative{
 	height: 100%;
 	position: relative;
@@ -75,6 +76,9 @@
 }
 .th,.td{
 	display: table-cell;
+}
+.a-map{
+	
 }
 .a-banner{
 	height: 100vh;
@@ -143,6 +147,7 @@
 	overflow:hidden;
 	position: relative;
 	text-align: left;
+	margin-top: 70px;
 	// border-radius: 50%;
 	width: 100%;
 	box-sizing:border-box;
@@ -162,7 +167,7 @@
 
 	}
 	.a-panel-item{
-		margin-bottom: 30px;
+		// margin-bottom: 30px;
 		input{
 			
 			padding: 0;
@@ -172,7 +177,7 @@
 		}
 	}
 	ul{
-		margin-top: 20px;
+		// margin-top: 20px;
 		a:first-child{
 			
 			
