--- a/src/scss/pageActivity/pageBranch/_pageRecommend.scss
+++ b/src/scss/pageActivity/pageBranch/_pageRecommend.scss
@@ -62,7 +62,7 @@
     z-index: -1;
     opacity: 0.8;
     position: absolute;
-          top: 200px;
+          top: -60px;
           bottom: 0px;
           left: 0;
           right: 0;
@@ -80,8 +80,8 @@
   background-image: url("../img/a_004.jpg");
   transform: translate(0, 0); 
   .a-r-star{
-    stroke-dashoffset: 3000;
-    stroke-dasharray: 3000;
+    // stroke-dashoffset:1000;
+    // stroke-dasharray: 1000;
   }
   #svg_2{
     animation: circle 2s linear both;
@@ -99,9 +99,10 @@
   background-image: url("../img/a_004.jpg");
   transform: translate(0, 100%); 
   .a-r-star{
-    stroke-dashoffset:5000;
-    stroke-dasharray:5000;
-    top: -70px;
+    // stroke-dashoffset:2000;
+    // stroke-dasharray:2000;
+    top: 111px;
+    left:1px;
   }
   #svg_4{
     animation: circle 5s  linear both;
